--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "online-store",
+  "homepage": "https://lnferrari.github.io/react-online-shop/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "rating-star": "^1.1.0",
     "react": "^17.0.2",
@@ -20,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
