added functionality for wishList and addToBasket. Had to change the API

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 REACT_APP_API_KEY = B95646B9E14943D59764D59BAFE2BB6D
+REACT_APP_RAPIDAPI_KEY = 9515fb6270mshf72d632d3de48a7p1c263djsnec4ad8df2195
+REACT_APP_API_KEY_DETAILS = a438be699e1c4f2b1e62ff649419355b
 
 REACT_APP_API_URL = https://api.rainforestapi.com/request?api_key=
 
