--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-store",
-  "homepage": "https://lnferrari.github.io/react-online-shop/",
+  "homepage": "https://lnferrari.github.io/react-online-shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
