styled product page and added more details. Having a lot of problems with the APIs (each of them allows for very few requests to be made).

--- a/.env
+++ b/.env
@@ -1,9 +1,32 @@
-REACT_APP_API_KEY = B95646B9E14943D59764D59BAFE2BB6D
+REACT_APP_API_CATEGORIES_KEY = eb77058579b74e68887d32426c822bd7
+REACT_APP_API_CATEGORIES2_KEY = 3f7c9bf77377457988af82e345702eef
+
+79776ec62d06981ee15f865366deeb5e key
+
+REACT_APP_MY_API_KEY = a438be699e1c4f2b1e62ff649419355b
 REACT_APP_RAPIDAPI_KEY = 9515fb6270mshf72d632d3de48a7p1c263djsnec4ad8df2195
-REACT_APP_API_KEY_DETAILS = a438be699e1c4f2b1e62ff649419355b
+REACT_APP_CATEGORYPRODUCTS_KEY = 584650c177mshb9c5ad3ea7c0804p18d2dcjsnaeaa28973d9a
 
-REACT_APP_API_URL = https://api.rainforestapi.com/request?api_key=
 
-deal = https://api.rainforestapi.com/request?api_key=${API_KEY}&type=deals&amazon_domain=amazon.com&deal_types=deal_of_the_day
-
-product = https://api.rainforestapi.com/request?api_key=${API_KEY}&type=product&amazon_domain=amazon.com&asin=${asin}
+const getProductData = async () => {
+    let newData = []
+    productList.map(async item => {
+      const asin = item.url.split('/')[5]
+      const options = {
+        url: `https://tvb-amazon-data-scraper.p.rapidapi.com/products/${asin}`,
+        params: {api_key: API_KEY},
+        headers: {
+          'x-rapidapi-key': RAPIDAPI_KEY,
+          'x-rapidapi-host': 'tvb-amazon-data-scraper.p.rapidapi.com'
+        }
+      };
+      try {
+        const apiResponse = await axios(options)
+        const apiResult = await apiResponse.data
+        newData = [apiResult, {...newData, asin: item.asin}]
+        setProductInfo(newData)
+      } catch (error) {
+        console.log(error)
+      }
+    })
+  }
