added new APIs and some style to the basketPage

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ REACT_APP_API_CATEGORIES2_KEY = 3f7c9bf77377457988af82e345702eef
 79776ec62d06981ee15f865366deeb5e key
 
 REACT_APP_MY_API_KEY = a438be699e1c4f2b1e62ff649419355b
+REACT_APP_MY_API_KEY_2 = 319ec597eae33f4f84f8744b3600349f
 REACT_APP_RAPIDAPI_KEY = 9515fb6270mshf72d632d3de48a7p1c263djsnec4ad8df2195
 REACT_APP_CATEGORYPRODUCTS_KEY = 584650c177mshb9c5ad3ea7c0804p18d2dcjsnaeaa28973d9a
 
